sources/libClangSharp/ClangSharp.h

enum CX_DeclKind {
    CX_DeclKind_Invalid,
#define DECL(DERIVED, BASE) CX_DeclKind_##DERIVED,
#define DECL_RANGE(BASE, START, END) CX_DeclKind_First##BASE = CX_DeclKind_##START, CX_DeclKind_Last##BASE = CX_DeclKind_##END,
#define LAST_DECL_RANGE(BASE, START, END) CX_DeclKind_First##BASE = CX_DeclKind_##START, CX_DeclKind_Last##BASE = CX_DeclKind_##END
#define ABSTRACT_DECL(DECL)
#include <clang/AST/DeclNodes.inc>
};
enum CX_ExprObjectKind {
    CX_OK_Invalid,
    CX_OK_Ordinary = clang::OK_Ordinary + 1,
    CX_OK_BitField = clang::OK_BitField + 1,
    CX_OK_VectorComponent = clang::OK_VectorComponent + 1,
    CX_OK_ObjCProperty = clang::OK_ObjCProperty + 1,
    CX_OK_ObjCSubscript = clang::OK_ObjCSubscript + 1,
    CX_OK_MatrixComponent = clang::OK_MatrixComponent + 1,
};
enum CX_OverloadedOperatorKind {
    CX_OO_Invalid = clang::OO_None,
#define OVERLOADED_OPERATOR(Name,Spelling,Token,Unary,Binary,MemberOnly) \
    CX_OO_##Name = clang::OO_##Name,
#include "clang/Basic/OperatorKinds.def"
};
enum CX_StmtClass {
    CX_StmtClass_Invalid = clang::Stmt::NoStmtClass,
#define STMT(CLASS, PARENT) CX_StmtClass_##CLASS,
#define STMT_RANGE(BASE, FIRST, LAST) CX_StmtClass_First##BASE = CX_StmtClass_##FIRST, CX_StmtClass_Last##BASE = CX_StmtClass_##LAST,
#define LAST_STMT_RANGE(BASE, FIRST, LAST) CX_StmtClass_First##BASE = CX_StmtClass_##FIRST, CX_StmtClass_Last##BASE = CX_StmtClass_##LAST
#define ABSTRACT_STMT(STMT)
#include <clang/AST/StmtNodes.inc>
};
enum CX_StringKind {
    CX_SLK_Invalid,
    CX_SLK_Ordinary = static_cast<int>(clang::StringLiteralKind::Ordinary) + 1,
    CX_SLK_Wide = static_cast<int>(clang::StringLiteralKind::Wide) + 1,
    CX_SLK_UTF8 = static_cast<int>(clang::StringLiteralKind::UTF8) + 1,
    CX_SLK_UTF16 = static_cast<int>(clang::StringLiteralKind::UTF16) + 1,
    CX_SLK_UTF32 = static_cast<int>(clang::StringLiteralKind::UTF32) + 1,
    CX_SLK_Unevaluated = static_cast<int>(clang::StringLiteralKind::Unevaluated) + 1,
};
enum CX_TypeTrait {
    CX_TT_Invalid,
#define TYPE_TRAIT_1(Spelling, Name, Key) CX_UTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_UTT_Last = 0 // CX_UTT_Last == last CX_UTT_XX in the enum.
#define TYPE_TRAIT_1(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_2(Spelling, Name, Key) CX_BTT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_BTT_Last = CX_UTT_Last // CX_BTT_Last == last CX_BTT_XX in the enum.
#define TYPE_TRAIT_2(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
    ,
#define TYPE_TRAIT_N(Spelling, Name, Key) CX_TT_##Name,
#include "clang/Basic/TokenKinds.def"
    CX_TT_Last = CX_BTT_Last // CX_TT_Last == last CX_TT_XX in the enum.
#define TYPE_TRAIT_N(Spelling, Name, Key) +1
#include "clang/Basic/TokenKinds.def"
};
enum CX_UnaryExprOrTypeTrait {
    CX_UETT_Invalid,
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) CX_UETT_##Name,
 #include "clang/Basic/TokenKinds.def"
    CX_UETT_Last = -1 // CX_UETT_Last == last CX_UETT_XX in the enum.
 #define UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #define CXX11_UNARY_EXPR_OR_TYPE_TRAIT(Spelling, Name, Key) +1
 #include "clang/Basic/TokenKinds.def"
};
struct CX_TemplateArgument {
    CXTemplateArgumentKind kind;
    int xdata;
    const clang::TemplateArgument* value;
    CXTranslationUnit tu;
};
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumTemplateParameters(CXCursor C, unsigned listIndex);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumTemplateParameterLists(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumTypeParams(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getNumVBases(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getObjCRuntimeNameAttrMetadataName(CXCursor C);
CLANGSHARP_LINKAGE CX_ExprObjectKind clangsharp_Cursor_getObjectKind(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getOpaqueValue(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getOperand(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getOutputConstraint(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getOutputExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getOutputName(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getOriginalType(CXCursor C);
CLANGSHARP_LINKAGE CX_OverloadedOperatorKind clangsharp_Cursor_getOverloadedOperatorKind(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getPackLength(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getParentFunctionOrMethod(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getPromiseCall(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getPromiseDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getPlaceholderTypeConstraint(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getPreviousDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getPrimaryTemplate(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getPropertyAttributes(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getProtocol(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getQualifiedName(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getRedeclContext(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getReferenced(CXCursor C);
CLANGSHARP_LINKAGE CXRefQualifierKind clangsharp_Cursor_getRefQualifier(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getRequiresZeroInitialization(CXCursor C);
CLANGSHARP_LINKAGE int64_t clangsharp_Cursor_getResultAsAPSInt(CXCursor C);
CLANGSHARP_LINKAGE int clangsharp_Cursor_getResultIndex(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getResultDecl(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getReturnStmt(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getReturnStmtOnAllocFailure(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getReturnValue(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getReturnValueInit(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getReturnType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getRhsExpr(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getSelector(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getShouldCopy(CXCursor C);
CLANGSHARP_LINKAGE CXSourceRange clangsharp_Cursor_getSourceRange(CXCursor C);
CLANGSHARP_LINKAGE CXSourceRange clangsharp_Cursor_getSourceRangeRaw(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSpecialization(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_StmtClass clangsharp_Cursor_getStmtClass(CXCursor C);
CLANGSHARP_LINKAGE CX_StringKind clangsharp_Cursor_getStringLiteralKind(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getStringLiteralValue(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSubDecl(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSubExpr(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSubExprAsWritten(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getSubStmt(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getTargetUnionField(CXCursor C);
CLANGSHARP_LINKAGE CX_TemplateArgument clangsharp_Cursor_getTemplateArgument(CXCursor C, unsigned i);